--- a/src/Pages/Admin/Admin.css
+++ b/src/Pages/Admin/Admin.css
@@ -1,8 +1,8 @@
 @media only screen and (max-width: 400px) {
     .admin-responsive{
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
-
+        margin-bottom: 10px;
+        overflow-y: hidden;
+ 
     }
     
   }
